<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".localization.localizationmenu.LocalizationMenuFragment">

    <RadioButton
        android:id="@+id/localizeButton"
        style="@style/RadioButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="100dp"
        android:text="@string/localize_yourself"
        app:layout_constraintBottom_toTopOf="@+id/goToInitialPositionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <RadioButton
        android:id="@+id/goToInitialPositionButton"
        style="@style/RadioButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="140dp"
        android:layout_marginStart="140dp"
        android:text="@string/go_to_initial_position"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localizeButton" />

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:contentDescription="@string/close_content_description"
        android:scaleType="center"
        android:src="@drawable/ic_baseline_close"
        android:tint="@color/navigation_tint_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:contentDescription="@string/back_content_description"
        android:scaleType="center"
        android:src="@drawable/ic_baseline_back"
        android:tint="@color/navigation_tint_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/localization_menu_title"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

</android.support.constraint.ConstraintLayout>