<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".localization.gotoorigin.GoToOriginFragment">

    <Button
        android:id="@+id/startGoToButton"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTextView" />

    <TextView
        android:id="@+id/infoTextView"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/startGoToButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/warningImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Something is wrong" />

    <ImageView
        android:id="@+id/warningImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/warning_content_description"
        app:layout_constraintBottom_toBottomOf="@+id/infoTextView"
        app:layout_constraintEnd_toStartOf="@+id/infoTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/infoTextView"
        app:srcCompat="@drawable/ic_warning" />

    <ImageView
        android:id="@+id/successImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/success_content_description"
        app:layout_constraintBottom_toBottomOf="@+id/startGoToButton"
        app:layout_constraintEnd_toEndOf="@+id/startGoToButton"
        app:layout_constraintStart_toStartOf="@+id/startGoToButton"
        app:layout_constraintTop_toTopOf="@+id/startGoToButton"
        app:srcCompat="@drawable/ic_check" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressAnimationView"
        android:layout_width="173dp"
        android:layout_height="173dp"
        app:layout_constraintBottom_toBottomOf="@+id/startGoToButton"
        app:layout_constraintEnd_toEndOf="@+id/startGoToButton"
        app:layout_constraintStart_toStartOf="@+id/startGoToButton"
        app:layout_constraintTop_toTopOf="@+id/startGoToButton"
        app:lottie_autoPlay="true"
        app:lottie_fileName="@string/progress_animation_file"
        app:lottie_loop="true" />

</androidx.constraintlayout.widget.ConstraintLayout>